--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "axios": "^0.18.0",
+    "babel-polyfill": "^6.26.0",
     "proptypes": "^1.1.0",
     "query-string": "^6.1.0",
     "react": "^16.4.1",
